<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/bottom_nav"
    app:startDestination="@id/homeFragment">

    <fragment
        android:id="@+id/homeFragment"
        android:name="tn.esprit.lifestyle.ui.home.HomeFragment"
        android:label="@string/label_home"
        tools:layout="@layout/fragment_home" />
    <fragment
        android:id="@+id/toDoFragment"
        android:name="tn.esprit.lifestyle.ui.todo.ToDoFragment"
        android:label="@string/label_to_do"
        tools:layout="@layout/fragment_to_do" >
        <action
            android:id="@+id/action_toDoFragment_to_singleToDoFragment"
            app:destination="@id/singleToDoFragment" />
    </fragment>
    <fragment
        android:id="@+id/sportFragment"
        android:name="tn.esprit.lifestyle.ui.sport.SportFragment"
        android:label="@string/label_sport"
        tools:layout="@layout/fragment_sport" />
    <fragment
        android:id="@+id/healthFragment"
        android:name="tn.esprit.lifestyle.ui.health.HealthFragment"
        android:label="@string/label_health"
        tools:layout="@layout/fragment_health" />
    <fragment
        android:id="@+id/singleToDoFragment"
        android:name="tn.esprit.lifestyle.ui.todo.SingleToDoFragment"
        android:label="@string/title_to_do"
        tools:layout="@layout/fragment_single_to_do" >
        <argument
            android:name="toDo"
            app:argType="tn.esprit.lifestyle.entities.ToDo"
            app:nullable="true"
            android:defaultValue="@null" />
    </fragment>
</navigation>